--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
+certifi==2020.11.8
+chardet==3.0.4
+idna==2.10
+numpy==1.19.4
+opencv-python==4.4.0.46
+PyJWT==1.7.1
+pytz==2020.4
 PyYAML==5.3.1
+requests==2.25.0
+six==1.15.0
 twilio==6.47.0
+urllib3==1.26.2
